# BusOptimization

./: .gitignore  Cargo.toml  README.md
data/: routes.csv  stops.csv
src/: lib.rs  main.rs
src/cli/: config.rs
src/data/: loader.rs  mod.rs  structures.rs
src/geo/: haversine.rs  mod.rs
src/raptor/: backward.rs  geojson.rs  journey.rs  mod.rs  private_bus.rs
tests/: integration_tests.rs
