[package]
name = "bus_raptor"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
bitvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
geo = "0.26"
haversine = "0.2"
clap = { version = "4.4", features = ["derive"] }
geojson = { version = "0.24.1", features = ["geo-types"] }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "bus_raptor"
path = "src/lib.rs"

[[bin]]
name = "bus_raptor"
path = "src/main.rs"